WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224352
[Win] Wrong KeyboardEvent.key for numeric key pad with NumLock
https://bugs.webkit.org/show_bug.cgi?id=224352
Summary
[Win] Wrong KeyboardEvent.key for numeric key pad with NumLock
Fujii Hironori
Reported
2021-04-08 18:17:58 PDT
[Win] Wrong KeyboardEvent.key for numeric key pad with NumLock 1. Connect your keyboard with a numeric key pad to your PC 2. Enable the NumLock key 3. Start Windows MiniBrowser 4. Go to
https://w3c.github.io/uievents/tools/key-event-viewer.html
5. Press '8' key on the numeric key pad 6. 'ArrowUp' key event is dispatched Expected: '8' key event is dispatched This issue can be reproduced with Windows' On-Screen Keyboard by enabling a numeric key pad option.
Attachments
Patch
(5.57 KB, patch)
2021-04-08 18:31 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-04-08 18:31:59 PDT
Created
attachment 425567
[details]
Patch
Fujii Hironori
Comment 2
2021-04-08 23:06:04 PDT
Comment on
attachment 425567
[details]
Patch Clearing flags on attachment: 425567 Committed
r275750
(
236328@main
): <
https://commits.webkit.org/236328@main
>
Fujii Hironori
Comment 3
2021-04-08 23:06:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-04-08 23:07:15 PDT
<
rdar://problem/76439277
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug