[Win] Wrong KeyboardEvent.key for numeric key pad with NumLock https://bugs.webkit.org/show_bug.cgi?id=224352

Reviewed by Don Olmstead.

Source/WebCore:

`8` key on a numeric key pad with NumLock dispatched a wrong
KeyboardEvent with `ArrowUp` as the `key` value. It should be `8`.

WindowsKeyNames::domKeyFromLParam computed a virtual key by
MapVirtualKey and a scan code. But, it should use a real virtual
key conveyed by WPARAM of WM_KEYDOWN and WM_KEYUP events.

* platform/win/KeyEventWin.cpp:
(WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
* platform/win/WindowsKeyNames.cpp:
(WebCore::WindowsKeyNames::domKeyFromParams):
(WebCore::WindowsKeyNames::domKeyFromLParam): Deleted.
* platform/win/WindowsKeyNames.h:

Source/WebKit:

* Shared/win/WebEventFactory.cpp:
(WebKit::WebEventFactory::createWebKeyboardEvent):

Canonical link: https://commits.webkit.org/236328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275750 268f45cc-cd09-0410-ab3c-d52691b4dbfc