Source/WebCore/platform/win/WindowsKeyNames.cpp
@@ -240,11 +240,9 @@ WindowsKeyNames::WindowsKeyNames()
     updateLayout();
 }
 
-String WindowsKeyNames::domKeyFromLParam(LPARAM lParam)
+String WindowsKeyNames::domKeyFromParams(WPARAM virtualKey, LPARAM lParam)
 {
-    unsigned scanCode = (lParam >> 16) & 0xff;
     bool extended = lParam & 0x01000000;
-    unsigned virtualKey = MapVirtualKey(scanCode, MAPVK_VSC_TO_VK);
     KeyModifierSet modifiers;
     if (GetKeyState(VK_SHIFT) < 0)
         modifiers.add(KeyModifier::Shift);
